@@ -92,6 +92,7 @@
     (module-define! m 'footsep (* 4 mm))
     (module-define! m 'leftmargin #f)
     (module-define! m 'firstpagenumber 1)
+    (module-define! m 'printfirstpagenumber #f)
     (module-define! m 'rightmargin (* 10 mm))))
 
 (define (internal-set-paper-size module name landscape?)
